# BGlib

./: .buildinfo  .gitignore  .travis.yml  README.rst  about.html  bglib_mcp_server.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test_mcp_server.py
.doctrees/: about.doctree  index.doctree
BGlib/: __init__.py  __version__.py  bglib_fitter.py  bglib_guesser.py  bglib_process.py
_autosummary/: BGlib.be.analysis.be_loop_fitter.BELoopFitter.html  BGlib.be.analysis.be_loop_fitter.guess_loops_hierarchically.html  BGlib.be.analysis.be_loop_fitter.html  BGlib.be.analysis.be_loop_fitter.logger.html  BGlib.be.analysis.be_loop_fitter.shift_vdc.html  BGlib.be.analysis.be_relax_fit.BERelaxFit.html  BGlib.be.analysis.be_relax_fit.double_exp.html  BGlib.be.analysis.be_relax_fit.exp.html  BGlib.be.analysis.be_relax_fit.fit_double_exp.html  BGlib.be.analysis.be_relax_fit.fit_exp_curve.html  BGlib.be.analysis.be_relax_fit.fit_sigmoid.html  BGlib.be.analysis.be_relax_fit.fit_str_exp.html  BGlib.be.analysis.be_relax_fit.html  BGlib.be.analysis.be_relax_fit.sigmoid.html  BGlib.be.analysis.be_relax_fit.str_exp.html  BGlib.be.analysis.be_sho_fitter.BESHOfitter.html  BGlib.be.analysis.be_sho_fitter.SHOFitFunc.html  BGlib.be.analysis.be_sho_fitter.SHOGuessFunc.html  BGlib.be.analysis.be_sho_fitter.complex_gaussian.html  BGlib.be.analysis.be_sho_fitter.html  BGlib.be.analysis.be_sho_fitter.wavelet_peaks.html  BGlib.be.analysis.fitter.Fitter.html  BGlib.be.analysis.fitter.html  (+153 more)
docs/: Makefile
(+584 files in other folders)
