[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["notebooks", "docs"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501", "F841"]
